--- a/src/styles/BookDetails.css
+++ b/src/styles/BookDetails.css
@@ -10,20 +10,26 @@
   justify-content: center;
   align-items: center;
   background-color: #F4E8E7;
+  
 }
 
 .book-card-det {
+  width: 100%;
   display: flex;
   flex-direction: row;
   background-color: #fff;
   border-radius: 10px;
   overflow: hidden;
+  display: flex;
+  align-items: center; 
+  gap: 10px;
 }
 
 .book-image-det {
-  width: 40%;
+  width: 250px;  /* Fixed width */
+  height: auto; /* Fixed height */
   overflow: hidden;
-  margin: 10px;
+  margin-left: 20px;
     border-radius: 20px;
     height: fit-content;
 }
@@ -31,7 +37,7 @@
 .book-image-det img {
   width: 100%;
   height: auto;
-  object-fit: cover;
+  object-fit: contain;
   transition: transform 0.3s ease-in-out;
 }
 
