--- a/src/styles/Navbar.css
+++ b/src/styles/Navbar.css
@@ -71,7 +71,7 @@
 
 
 .nav-item{
-  width: 100%;
+  width: fit-content;
   padding: 5px;
   border-radius: 10px;
   display: flex;
@@ -87,7 +87,6 @@
   line-height: 1px;
   text-decoration: none;
   margin-left: 10px;
-
 }
 
 /* Button styles */
@@ -117,69 +116,67 @@
 @media (max-width: 1024px) {
 
   
-/* Center the nav links */
-.nav-links {
-  display: flex;
-  list-style: none;
-  margin: 0;
-  padding: 0;
-  z-index: 999;
-  flex-grow: 1;
-  justify-content: center;
-  margin-left: 10px;
-  margin-right: 10px;
- 
-}
-.nav-item{
-  display: flex;
-  flex-direction: column;
-  width: 100%;
-}
-.nav-item div{
-  margin-left: 10px;
-line-height: 1px;
-}
-.nav-links li {
-  margin: 0 5px;
-}
-
-.nav-links a {
-  text-decoration: none; /* Remove underline */
-  color: #7D4F4A; /* Button text color */
-  background-color: #FEFDFD; /* Button background color */
-  border-radius: 10px; /* Rounded corners */
-  border: 1px solid transparent; /* Border for hover effect */
-  transition: all 0.3s ease; /* Smooth transition for hover */
-  font-size: 20px;
+  /* Center the nav links */
+  .nav-links {
+    display: flex;
+    list-style: none;
+    margin: 0;
+    padding: 0;
+    z-index: 999;
+    flex-grow: 1;
+    justify-content: center;
+    margin-left: 10px;
+    margin-right: 10px;
+  }
+  .nav-item{
+    flex-direction: column;
+    width: fit-content;
+  }
+  .nav-item div{
+    margin-left: 10px;
+  line-height: 1px;
+  }
+  .nav-links li {
+    margin: 0 5px;
+  }
   
-}
-
-.nav-links a:hover {
-  background-color: #F1F0EF; /* Darker background on hover */
-  border: 1px solid white; /* Show border on hover */
-}
-
-/* Button styles */
-
-
-.nav-button1{
-  margin-left: 1rem;
-  padding: 20px;
-    border: none;
-    border-radius: 20px;
-    background-color: #F6ECEB;
-    color: #7D4F4A;
-    font-size: 17px;
-    font-weight: bold;
-    margin-bottom: 5px;
-        margin-top: 5px;
-}
-
-.nav-button2 {
-  display: none; /* Space between buttons */
-}
-}
-
+  .nav-links a {
+    text-decoration: none; /* Remove underline */
+    color: #7D4F4A; /* Button text color */
+    background-color: #FEFDFD; /* Button background color */
+    border-radius: 10px; /* Rounded corners */
+    border: 1px solid transparent; /* Border for hover effect */
+    transition: all 0.3s ease; /* Smooth transition for hover */
+    font-size: 20px;
+    
+  }
+  
+  .nav-links a:hover {
+    background-color: #F1F0EF; /* Darker background on hover */
+    border: 1px solid white; /* Show border on hover */
+  }
+  
+  /* Button styles */
+  
+  
+  .nav-button1{
+    margin-left: 1rem;
+    padding: 20px;
+      border: none;
+      border-radius: 20px;
+      background-color: #F6ECEB;
+      color: #7D4F4A;
+      font-size: 17px;
+      font-weight: bold;
+      margin-bottom: 5px;
+          margin-top: 5px;
+  }
+  
+  .nav-button2 {
+    display: none; /* Space between buttons */
+  }
+  }
+  
 /* Responsive styles */
 @media (max-width: 768px) {
   .navbar-logo {
@@ -222,22 +219,16 @@ line-height: 1px;
     margin-bottom: 10px;
   }
   .nav-item{
-    width: 100%;
     padding: 5px;
     border-radius: 10px;
+    width: fit-content;
     flex-direction: row;
-    flex-grow: 1; 
-    display: flex;
     justify-content: flex-start;
   }
-  .nav-item:hover{
-    background-color: #F1F0EF; /* Darker background on hover */
-    border: 1px solid white; /* Show border on hover */
-  }
+  
   .nav-item div{
     line-height: 1px;
     text-decoration: none;
-  
   }
   .nav-links.active {
     display: flex; /* Show links when active */
@@ -294,3 +285,4 @@ line-height: 1px;
 }
   
 }
+
