--- a/src/styles/Banner.css
+++ b/src/styles/Banner.css
@@ -3,6 +3,21 @@
   margin: 20px;
 }
 
+.banner-slider {
+  width: 100%;
+  position: relative;
+  overflow: hidden;
+
+}
+
+.banner-slide {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  padding: 20px;
+  background-color: #f5f5f5;
+  
+}
 
 /* Banner content (text and button) */
 .banner-content {
@@ -21,6 +36,10 @@
   opacity: 0.98;
   justify-content: center;
   width: auto;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  width: 100%;
 
 }
 
@@ -31,14 +50,23 @@
   padding: 10px;
   display: flex;
 }
+
+.banner-text {
+  flex: 1;
+  padding: 20px;
+  background-size: cover;
+  
+}
+
+
 /* Main heading styling */
 .banner-title {
   font-size: 3rem;
   font-weight: bold;
   margin-bottom: 1rem;
-  text-shadow: 2px 2px 10px rgba(0, 0, 0, 0.5);
   line-height: 1.2;
-  color: #f1f1f1;
+  color: #A88986;
+  text-align: start;
 }
 
 /* Subtitle styling */
@@ -46,7 +74,7 @@
   font-size: 1.5rem;
   margin-bottom: 1.5rem;
   font-weight: 300;
-  color: #f1f1f1;
+  color: #7D4F4A;
 }
 
 /* Button styling */
@@ -76,7 +104,18 @@
   color: rgb(22, 26, 53);
  
 }
+.banner-image {
+  text-align: right;
+  width: 300px;
+}
 
+.banner-image img {
+  max-width: 80%;
+  height: auto;
+  display: inline;
+  object-fit: cover;
+  border-radius: 10px;
+}
 /* Button hover effect */
 
 /* Responsive design */
@@ -87,16 +126,36 @@
     margin-right: 20px;
     margin-top: 130px;
   }
+  .banner-text{
+    order: 2; 
+    text-align: center;
+    padding: 0 20px;
+  }
+  .banner-slide {
+    flex-direction: column;
+  }
   .banner-title {
     font-size: 2.5rem;
+    text-align: center;
   }
 
   .banner-subtitle {
     font-size: 1.2rem;
+    text-align: center;
   }
 
   .banner-button {
     font-size: 1rem;
     padding: 0.6rem 1.2rem;
+  }
+  .banner-image {
+    order: 1;
+    text-align: center;
+    margin-top: 20px;
+  }
+
+  .banner-image img {
+    width: 100%;
+    max-width: 300px;
   }
 }
